Initial update to install script

--- a/Supervisor/openrvdas_sqlite.ini
+++ b/Supervisor/openrvdas_sqlite.ini
@@ -16,9 +16,9 @@ stdout_logfile=/var/log/openrvdas/fcgiwrap_stdout.log
 stderr_logfile=/var/log/openrvdas/fcgiwrap_stderr.log
 
 [program:logger_manager_sqlite]
-command=/opt/openrvdas/venv/bin/python server/logger_manager.py --database sqlite --data_server_websocket :8766 -v -V --no-console
-environment=PATH="/opt/openrvdas/venv/bin:/usr/bin:/usr/local/bin"
-directory=/opt/openrvdas
+command=BASEDIR/venv/bin/python server/logger_manager.py --database sqlite --data_server_websocket :8766 -v -V --no-console
+environment=PATH="BASEDIR/venv/bin:/usr/bin:/usr/local/bin"
+directory=BASEDIR
 autostart=false
 autorestart=false
 startretries=3
@@ -30,8 +30,8 @@ user=rvdas
 
 ; The scripts we're going to run
 [program:nginx_sqlite]
-command=/usr/sbin/nginx -g 'daemon off;' -c /opt/openrvdas/sqlite_gui/nginx/nginx_sqlite.conf
-directory=/opt/openrvdas
+command=/usr/sbin/nginx -g 'daemon off;' -c BASEDIR/sqlite_gui/nginx/nginx_sqlite.conf
+directory=BASEDIR
 autostart=false
 autorestart=true
 startretries=3
