--- a/Supervisor/openrvdas_sqlite.ini
+++ b/Supervisor/openrvdas_sqlite.ini
@@ -1,8 +1,8 @@
 [fcgi-program:fcgiwrap]
-command=/usr/bin/spawn-fcgi -n -s /var/run/supervisor/fcgiwrap.sock -u nginx -- /usr/sbin/fcgiwrap 
+command=FCGI_PATH/spawn-fcgi -n -s FCGI_SOCKET -u nginx -- FCGI_PATH/fcgiwrap
 user=root
-socket=unix:///var/run/supervisor/fcgiwrap.sock
-socket_owner=rvdas:rvdas
+socket=unix://FCGI_SOCKET
+socket_owner=RVDAS_USER:RVDAS_USER
 socket_mode=0770
 autorestart=true
 autostart=false
@@ -12,8 +12,9 @@ stopsignal=QUIT
 stopwaitsecs=10
 environment=PATH='/usr/local/sbin:/usr/local/bin:/sbin:/bin:/usr/sbin:/usr/bin'
 redirect_stderr=false
-stdout_logfile=/var/log/openrvdas/fcgiwrap_stdout.log
-stderr_logfile=/var/log/openrvdas/fcgiwrap_stderr.log
+stderr_logfile=/var/log/openrvdas/fcgiwrap.stderr
+stderr_logfile_maxbytes=10000000 ; 10M
+stderr_logfile_maxbackups=100
 
 [program:logger_manager_sqlite]
 command=BASEDIR/venv/bin/python server/logger_manager.py --database sqlite --data_server_websocket :8766 -v -V --no-console
@@ -26,11 +27,22 @@ killasgroup=true
 stderr_logfile=/var/log/openrvdas/logger_manager.stderr
 stderr_logfile_maxbytes=10000000 ; 10M
 stderr_logfile_maxbackups=100
-user=rvdas
+user=RVDAS_USER
+
+[program:cached_data_server_sqlite]
+command=BASEDIR/venv/bin/python server/cached_data_server.py --port 8766 --disk_cache /var/tmp/openrvdas/disk_cache --max_records 8640 -v
+directory=BASEDIR
+autostart=false
+autorestart=true
+startretries=3
+killasgroup=true
+stderr_logfile=/var/log/openrvdas/cached_data_server.stderr
+stderr_logfile_maxbytes=10000000 ; 10M
+stderr_logfile_maxbackups=100
 
 ; The scripts we're going to run
 [program:nginx_sqlite]
-command=/usr/sbin/nginx -g 'daemon off;' -c BASEDIR/sqlite_gui/nginx/nginx_sqlite.conf
+command=NGINX_PATH/nginx -g 'daemon off;' -c BASEDIR/sqlite_gui/nginx/nginx_sqlite.conf
 directory=BASEDIR
 autostart=false
 autorestart=true
@@ -39,8 +51,7 @@ killasgroup=true
 stderr_logfile=/var/log/openrvdas/nginx.stderr
 stderr_logfile_maxbytes=10000000 ; 10M
 stderr_logfile_maxbackups=100
-;user=rvdas
 
 [group:sqlite]
-programs=logger_manager_sqlite,fcgiwrap,nginx_sqlite
+programs=logger_manager_sqlite,cached_data_server_sqlite,fcgiwrap,nginx_sqlite
 
