--- a/nginx/nginx_sqlite_macos.conf
+++ b/nginx/nginx_sqlite_macos.conf
@@ -7,7 +7,7 @@ events {
 
 http {
     include       /usr/local/etc/nginx/mime.types;
-    # Be sure to include additionaly types in the same scope where
+    # Be sure to include additionally types in the same scope where
     # you import mime.types, or your types will be a complete over-ride.
     types {
         application/json    json5;
@@ -44,7 +44,7 @@ http {
         location / {
             # Supervisor web interface over https
             include /opt/openrvdas/sqlite_gui/nginx/nginx_cors.conf;
-            error_log /var/log/openrvdas/nginx.error.stderr info;
+            error_log /var/log/openrvdas/nginx.stderr info;
             proxy_pass http://localhost:9001;
             proxy_http_version 1.1;
             proxy_buffering off;
@@ -63,7 +63,7 @@ http {
         server_name _; # accept any host name
         charset     utf-8;
 
-        error_log /var/log/openrvdas/nginx.error.stderr notice;
+        error_log /var/log/openrvdas/nginx.stderr notice;
         # max upload size
         client_max_body_size 75M;   # adjust to taste
 
