--- a/nginx/nginx_sqlite.conf
+++ b/nginx/nginx_sqlite.conf
@@ -6,8 +6,8 @@ events {
 }
 
 http {
-    include       /etc/nginx/mime.types;
-    # Be sure to include additionaly types in the same scope where
+    include       NGINX_FILES/mime.types;
+    # Be sure to include additionally types in the same scope where
     # you import mime.types, or your types will be a complete over-ride.
     types {
         application/json    json5;
@@ -23,8 +23,8 @@ http {
     #access_log  logs/access.log  main;
 
     # Section will be commented out if we're not using SSL
-    ssl_certificate     /opt/openrvdas/sqlite_gui/nginx/openrvdas.crt;
-    ssl_certificate_key /opt/openrvdas/sqlite_gui/nginx/openrvdas.key;
+    ssl_certificate     BASEDIR/sqlite_gui/nginx/openrvdas.crt;
+    ssl_certificate_key BASEDIR/sqlite_gui/nginx/openrvdas.key;
     ssl_protocols       TLSv1.2 TLSv1.3;
     ssl_ciphers         ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384;
 
@@ -43,8 +43,8 @@ http {
 
         location / {
             # Supervisor web interface over https
-            include /opt/openrvdas/sqlite_gui/nginx/nginx_cors.conf;
-            error_log /var/log/nginx/error.log info;
+            include BASEDIR/sqlite_gui/nginx/nginx_cors.conf;
+            error_log /var/log/openrvdas/nginx.stderr info;
             proxy_pass http://localhost:9001;
             proxy_http_version 1.1;
             proxy_buffering off;
@@ -63,17 +63,17 @@ http {
         server_name _; # accept any host name
         charset     utf-8;
 
-        error_log /var/log/nginx/error.log notice;
+        error_log /var/log/openrvdas/nginx.stderr notice;
         # max upload size
         client_max_body_size 75M;   # adjust to taste
 
         location /display {
-            alias /opt/openrvdas/display/html; # display pages
+            alias BASEDIR/display/html; # display pages
             autoindex on;
         }
 
         location /docs {
-            alias /opt/openrvdas/docs; # project doc files
+            alias BASEDIR/docs; # project doc files
             autoindex on;
         }
 
@@ -92,7 +92,7 @@ http {
         # See https://gist.github.com/shukebeta/b7435d02892cb2ad2b9c8d56572adb2b
         #
         location ~ /.*\.md {
-            root /opt/openrvdas;
+            root BASEDIR;
             default_type text/html;
             charset UTF-8;
             add_before_body /js/StrapDown.js/prepend;
@@ -101,13 +101,13 @@ http {
 
         # This only works if you turn on fcgiwrap
         location /cgi-bin/ {
-            root /opt/openrvdas/sqlite_gui;
-            fastcgi_pass  unix://var/run/supervisor/fcgiwrap.sock;
+            root BASEDIR/sqlite_gui;
+            fastcgi_pass  unix:/FCGI_SOCKET;
             fastcgi_param HTTP_AUTHORIZATION $http_authorization;
-            include       /etc/nginx/fastcgi_params;
+            include       NGINX_FILES/nginx/fastcgi_params;
             fastcgi_pass_header Authorization;
             fastcgi_pass_request_headers on;
-            fastcgi_param SCRIPT_FILENAME /opt/openrvdas/sqlite_gui/$fastcgi_script_name;
+            fastcgi_param SCRIPT_FILENAME BASEDIR/sqlite_gui/$fastcgi_script_name;
         }
 
         # Attempt #137 to make supervisor hide behind port 443
@@ -124,7 +124,7 @@ http {
         location / {
             ssi on;
             autoindex on;
-            root /opt/openrvdas/sqlite_gui;
+            root BASEDIR/sqlite_gui;
         }
     }
 }
