--- a/Supervisor/openrvdas_sqlite.ini
+++ b/Supervisor/openrvdas_sqlite.ini
@@ -1,5 +1,5 @@
 [fcgi-program:fcgiwrap]
-command=FCGI_PATH/spawn-fcgi -n -s FCGI_SOCKET -u nginx -- FCGI_PATH/fcgiwrap
+command=FCGI_PATH/bin/spawn-fcgi -n -s FCGI_SOCKET -- FCGI_PATH/sbin/fcgiwrap
 user=root
 socket=unix://FCGI_SOCKET
 socket_owner=RVDAS_USER:RVDAS_USER
