--- a/cgi-bin/secret.py.dist
+++ b/cgi-bin/secret.py.dist
@@ -20,8 +20,8 @@ from datetime import datetime, timedelta
 ##############################################################################
 ##############################################################################
 # https://xkcd.com/936/
-_SECRET = 7f9167eeb059f926edd30cad77fac7d3
-#    LEN:"12345678901234567890123456789012"
+_SECRET = "Correct horse battery staple"
+#     LEN:"12345678901234567890123456789012"
 # Ideally, SHA256 passwords/phrases *should* be at least 32 bytes
 
 
