Tweak permissions on fcgi and nginx

--- a/Supervisor/openrvdas_sqlite.ini
+++ b/Supervisor/openrvdas_sqlite.ini
@@ -1,6 +1,5 @@
 [fcgi-program:fcgiwrap]
-command=FCGI_PATH/bin/spawn-fcgi -n -s FCGI_SOCKET -- FCGI_PATH/sbin/fcgiwrap
-user=root
+command=FCGI_PATH/bin/spawn-fcgi -n -s FCGI_SOCKET -u RVDAS_USER -- FCGI_PATH/sbin/fcgiwrap
 socket=unix://FCGI_SOCKET
 socket_owner=RVDAS_USER:RVDAS_USER
 socket_mode=0770
