--- a/nginx/nginx_sqlite.conf.dist
+++ b/nginx/nginx_sqlite.conf.dist
@@ -19,8 +19,8 @@ http {
     gzip_static   on;
 
     # Section will be commented out if we're not using SSL
-    ssl_certificate     BASEDIR/sqlite_gui/nginx/openrvdas.crt;
-    ssl_certificate_key BASEDIR/sqlite_gui/nginx/openrvdas.key;
+    ssl_certificate     BASEDIR/openrvdas.crt;
+    ssl_certificate_key BASEDIR/openrvdas.key;
     ssl_protocols       TLSv1.2 TLSv1.3;
     ssl_ciphers         ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384;
 
