--- a/nginx/nginx_sqlite.conf.dist
+++ b/nginx/nginx_sqlite.conf.dist
@@ -93,6 +93,16 @@ http {
             add_after_body /js/StrapDown.js/postpend;
         }
 
+        # Attempt #137 to make supervisor hide behind port 443
+        location ^~ /supervisor/ {
+            rewrite ^/supervisor(/.*) $1 break;
+            proxy_pass http://localhost:9001;
+            proxy_set_header Host $host/supervisor;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "upgrade";
+        }
+
         # This only works if you turn on fcgiwrap
         location /sqlite-gui/cgi-bin/ {
             root BASEDIR/sqlite_gui;
@@ -104,21 +114,11 @@ http {
             fastcgi_param SCRIPT_FILENAME BASEDIR/sqlite_gui/$fastcgi_script_name;
         }
 
-        # Attempt #137 to make supervisor hide behind port 443
-        location ^~ /supervisor/ {
-            rewrite ^/supervisor(/.*) $1 break;
-            proxy_pass http://localhost:9001;
-            proxy_set_header Host $host/supervisor;
-            proxy_http_version 1.1;
-            proxy_set_header Upgrade $http_upgrade;
-            proxy_set_header Connection "upgrade";
-        }
-
         # Everyting else gets handled normally.
         location / {
             ssi on;
             autoindex on;
-            root BASEDIR/sqlite_gui;
+            root BASEDIR/sqlite_gui/html;
         }
     }
 }
