Set OPENRVDAS_ROOT in own file

--- a/nginx/nginx_sqlite.conf.dist
+++ b/nginx/nginx_sqlite.conf.dist
@@ -19,8 +19,8 @@ http {
     gzip_static   on;
 
     # Section will be commented out if we're not using SSL
-    ssl_certificate     BASEDIR/openrvdas.crt;
-    ssl_certificate_key BASEDIR/openrvdas.key;
+    ssl_certificate     OPENRVDAS_ROOT/openrvdas.crt;
+    ssl_certificate_key OPENRVDAS_ROOT/openrvdas.key;
     ssl_protocols       TLSv1.2 TLSv1.3;
     ssl_ciphers         ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384;
 
@@ -39,7 +39,7 @@ http {
 
         location / {
             # Supervisor web interface over https
-            include BASEDIR/sqlite_gui/nginx/nginx_cors.conf;
+            include OPENRVDAS_ROOT/sqlite_gui/nginx/nginx_cors.conf;
             proxy_pass http://localhost:9001;
             proxy_http_version 1.1;
             proxy_buffering off;
@@ -62,12 +62,12 @@ http {
         client_max_body_size 75M;   # adjust to taste
 
         location /display {
-            alias BASEDIR/display/html; # display pages
+            alias OPENRVDAS_ROOT/display/html; # display pages
             autoindex on;
         }
 
         location /docs {
-            alias BASEDIR/docs; # project doc files
+            alias OPENRVDAS_ROOT/docs; # project doc files
             autoindex on;
         }
 
@@ -86,7 +86,7 @@ http {
         # See https://gist.github.com/shukebeta/b7435d02892cb2ad2b9c8d56572adb2b
         #
         location ~ /.*\.md {
-            root BASEDIR;
+            root OPENRVDAS_ROOT;
             default_type text/html;
             charset UTF-8;
             add_before_body /js/StrapDown.js/prepend;
@@ -105,26 +105,26 @@ http {
 
         # This only works if you turn on fcgiwrap
         location /cgi-bin/ {
-            root BASEDIR/sqlite_gui;
+            root OPENRVDAS_ROOT/sqlite_gui;
             fastcgi_pass  unix://FCGI_SOCKET;
             fastcgi_param HTTP_AUTHORIZATION $http_authorization;
             include       NGINX_FILES/fastcgi_params;
             fastcgi_pass_header Authorization;
             fastcgi_pass_request_headers on;
-            fastcgi_param SCRIPT_FILENAME BASEDIR/sqlite_gui/$fastcgi_script_name;
+            fastcgi_param SCRIPT_FILENAME OPENRVDAS_ROOT/sqlite_gui/$fastcgi_script_name;
         }
 
         # Javascript and css in the /js subdir.
         location /js/ {
             ssi on;
             autoindex on;
-            root BASEDIR/sqlite_gui;
+            root OPENRVDAS_ROOT/sqlite_gui;
         }
         # Everything else gets handled normally.
         location / {
             ssi on;
             autoindex on;
-            root BASEDIR/sqlite_gui/html;
+            root OPENRVDAS_ROOT/sqlite_gui/html;
         }
     }
 }
