--- a/supervisor/openrvdas_sqlite.ini
+++ b/supervisor/openrvdas_sqlite.ini
@@ -16,9 +16,9 @@ stderr_logfile_maxbytes=10000000 ; 10M
 stderr_logfile_maxbackups=100
 
 [program:logger_manager_sqlite]
-command=BASEDIR/venv/bin/python server/logger_manager.py --database sqlite --data_server_websocket :8766 -v -V --no-console
-environment=PATH="BASEDIR/venv/bin:/usr/bin:/usr/local/bin"
-directory=BASEDIR
+command=OPENRVDAS_ROOT/venv/bin/python server/logger_manager.py --database sqlite --data_server_websocket :8766 -v -V --no-console
+environment=PATH="OPENRVDAS_ROOT/venv/bin:/usr/bin:/usr/local/bin"
+directory=OPENRVDAS_ROOT
 autostart=false
 autorestart=false
 startretries=3
@@ -29,8 +29,8 @@ stderr_logfile_maxbackups=100
 user=RVDAS_USER
 
 [program:cached_data_server_sqlite]
-command=BASEDIR/venv/bin/python server/cached_data_server.py --port 8766 --disk_cache /var/tmp/openrvdas/disk_cache --max_records 8640 -v
-directory=BASEDIR
+command=OPENRVDAS_ROOT/venv/bin/python server/cached_data_server.py --port 8766 --disk_cache /var/tmp/openrvdas/disk_cache --max_records 8640 -v
+directory=OPENRVDAS_ROOT
 autostart=false
 autorestart=true
 startretries=3
@@ -41,8 +41,8 @@ stderr_logfile_maxbackups=100
 
 ; The scripts we're going to run
 [program:nginx_sqlite]
-command=NGINX_PATH/nginx -g 'daemon off;' -c BASEDIR/sqlite_gui/nginx/nginx_sqlite.conf
-directory=BASEDIR
+command=NGINX_PATH/nginx -g 'daemon off;' -c OPENRVDAS_ROOT/sqlite_gui/nginx/nginx_sqlite.conf
+directory=OPENRVDAS_ROOT
 autostart=false
 autorestart=true
 startretries=3
