Reload supervisor on install

--- a/supervisor/openrvdas_sqlite.ini
+++ b/supervisor/openrvdas_sqlite.ini
@@ -1,3 +1,13 @@
+; First, override the default socket permissions to allow user
+; rvdas to run supervisorctl
+[unix_http_server]
+file=SUPERVISOR_SOCKET   ; (the path to the socket file)
+chmod=0770              ; socket file mode (default 0700)
+chown=nobody:rvdas
+
+[inet_http_server]
+port=9001
+
 [fcgi-program:fcgiwrap]
 command=FCGI_PATH/bin/spawn-fcgi -n -s FCGI_SOCKET -u RVDAS_USER -- FCGI_PATH/sbin/fcgiwrap
 socket=unix://FCGI_SOCKET
